# XoFTR

./: pyproject.toml
xoftr/utils/: data_io.py
